--- a/src/views/frontend/home.handlebars
+++ b/src/views/frontend/home.handlebars
@@ -37,7 +37,7 @@
             <hr class="tm-popular-item-hr">
             <p>{{Description}}</p>
             <div class="order-now-container">
-              <a href="#" class="order-now-link tm-handwriting-font">Order Now</a>
+              <a href="/product/{{Name}}" class="order-now-link tm-handwriting-font">Order Now</a>
             </div>
           </div>
         </div>
