--- a/src/views/frontend/menu.handlebars
+++ b/src/views/frontend/menu.handlebars
@@ -51,7 +51,7 @@
               <p class="tm-product-description">{{Description}}</p>
             </div>
             <div class="tm-product-price">
-              <a href="#" class="tm-product-price-link tm-handwriting-font">
+              <a href="/product/{{Name}}" class="tm-product-price-link tm-handwriting-font">
                 <span class="tm-product-price-currency">$</span>{{Price}}
               </a>
             </div>
