--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -680,7 +680,38 @@ ol li:before {
   color: #c79c60;
   text-decoration: none;
 }
+#menu-account_wrap{
+  position: relative;
+}
+#menu-account_wrap:hover #menu-account{
+  display: flex;
+  flex-direction: column;
+}
+#menu-account{
+  position: absolute;
+  display: none;
+  width: 80%;
+  margin-top: -15px;
+  left: 50%;
+  transform: translateX(-45%);
 
+  border: 1px solid rgb(165, 165, 165);
+
+  background-color: rgb(179, 179, 179);
+
+
+  text-align: center;
+}
+#menu-account li{
+  padding: 5px 0;
+  transition-duration: 1s;
+}
+#menu-account li:hover{
+  background-color: #000;
+}
+#menu-account li a{
+  padding: 0;
+}
 .tm-product {
   margin-right: 0;
   margin-left: auto;
@@ -778,12 +809,13 @@ ol li:before {
 }
 
 .form-control {
-  border-color: #c79c60;
+  /* border-color: #c79c60; */
   width: 60px;
   border-radius: 0;
+  font-size: 1em;
 }
 .form-control:focus { 
-  border-color: #c79c60; 
+  /* border-color: #c79c60;  */
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6); 
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6);
 }
@@ -804,6 +836,11 @@ ol li:before {
   border-color: rgb(136, 93, 33); 
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6); 
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6);
+}
+.quantity-detail, .quantity-detail:focus{
+  border-left: 0;
+  border-right: 0;
+  border-color: #000;
 }
 .quantity{
   border: 1px solid rgba(0, 0, 0, 0.7);
@@ -906,8 +943,9 @@ ol li:before {
 }
 .arrow{
   height: 34px;
-  width: 30px;
+  width: 60px;
   border: 1px solid rgba(0, 0, 0, 0.7);
+  padding: 0;
 }
 .arrow:active{
   background-color: rgb(221, 221, 221);
@@ -1043,8 +1081,11 @@ button.tm-more-button {
   margin: 10px;
   width: 50px;
   outline: none;
-  border: 1px solid rgba(0, 0, 0, 0.7);
+  border: 1px solid rgba(105, 105, 105, 0.7);
+  border-radius: 5px;
+  padding-left: 16px;
 }
+
   .panel {
       border: none;
       box-shadow: none;
@@ -1145,10 +1186,23 @@ button.tm-more-button {
   
   .pro-img-details {
       margin-left: -15px;
+      padding: 5px;
+      border: 1px solid rgb(128, 128, 128);
+      background-color: rgb(223, 223, 223);
+      border-radius: 5px;
   }
   
   .pro-img-details img {
       width: 100%;
+      height: 300px;
+      object-fit: fill;
+      border-radius: 5px;
+  }
+  .btn-addToCart, .btn-addToCart:hover{
+    color: #fff;
+  }
+  div.detail-wrap{
+    min-height: 650px;
   }
   
   .pro-d-title {
@@ -1261,6 +1315,11 @@ button.tm-more-button {
 }
 .horizontal-line{
   border-bottom: 1px solid #000;
+}
+.horizontal-line_top{
+  margin-top: 20px;
+  padding-top: 10px;
+  border-top: 1px solid #000;
 }
 #title-checkout-order h4{
   font-weight: bold;
