--- a/src/views/frontend/detail.handlebars
+++ b/src/views/frontend/detail.handlebars
@@ -1,66 +1,70 @@
 <div class="tm-main-section light-gray-bg detail-wrap">
-    <div class="container" id="main">
-        <div class="container bootdey">
-            <div class="col-md-12">
-                <section class="panel">
-                    <div class="panel-body">
-                        <div class="col-md-6">
-                            <div class="pro-img-details">
-                                <img src="/frontend/img/{{#each product}}{{Image}}{{/each}}" 
-                                alt="{{#each product}}{{Name}}{{/each}}">
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <h2 class="pro-d-title">
-                                {{#each product}}
-                                {{Name}}
-                                {{/each}}
-                            </h2>
-                            <p>
-                                {{#each product}}
-                                {{Description}}
-                                {{/each}}
-                            </p>
-                            <div class="m-bot15 horizontal-line_top"> 
-                                <strong>Price : </strong> 
-                                <span class="amount-old">
-                                {{#each product}}
-                                {{Price}}
-                                {{/each}}
-                                $
-                                </span> 
-                                <span class="pro-price"> {{priceDiscount}} $</span>
-                            </div>
-                            <div class="form-group">
-                                <span>Size :</span>
-                                <select name="size" id="size">
-                                    <option value="S" selected>S</option>
-                                    <option value="M">M</option>
-                                    <option value="L">L</option>
-                                </select>
-                                <br>
-                                <span for="sp1">Số lượng</span>
-                                <div class="quantity-btn-detail">
-                                    <input type="button" value="-" class="arrow" onclick="minus('sp1')" />
-                                    <input class="quantity-detail form-control" type="number" id="sp1" 
-                                    value="1" 
-                                        onkeyup="this.value=this.value.replace(/[^0-9]./g,'');" />
-                                    <input type="button" value="+" class="arrow" onclick="plus('sp1')" />
-                                </div>
-                            </div>
-                            <p>
-                                <button class="btn btn-round btn-danger outline">
-                                    <a href="{{#if_equal isExist false}}/sign-in{{/if_equal}}" class="btn-addToCart">
-                                        <i class="fa fa-shopping-cart"></i>
-                                        Thêm vào giỏ hàng
-                                    </a>
-                                </button>
-                            </p>
-                            <input type="number" id="product-quantity" class="hide" value="{{#each product}}{{Quantity}}{{/each}}"/>
+    <section class="panel">
+            <div class="pro-img-details">
+                <img src="/frontend/img/{{#each product}}{{Image}}{{/each}}" 
+                alt="{{#each product}}{{Name}}{{/each}}">
+            </div>
+            <div class="detail-content-wrap">
+                <h2 class="pro-d-title">
+                    {{#each product}}
+                    {{Name}}
+                    {{/each}}
+                </h2>
+                <p>
+                    {{#each product}}
+                    {{Description}}
+                    {{/each}}
+                </p>
+                <div class="m-bot15 horizontal-line-detail" id="priceSale">
+                    <div>
+                        <strong>Price : </strong> 
+                        <span class="amount-old">
+                        {{#each product}}
+                        {{Price}}
+                        {{/each}}
+                        $
+                        </span>
+                    </div>
+                    <div>
+                        <strong>Sale : </strong>
+                        <span class="pro-price"> {{priceDiscount}} $</span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="detailProductOption">
+                        <span>Size :</span>
+                        <select name="size" id="size">
+                            <option value="S" selected>S</option>
+                            <option value="M">M</option>
+                            <option value="L">L</option>
+                        </select>
+                    </div>
+                    <div class="detailProductOption">
+                        <span for="sp1">Số lượng:</span>
+                        <div class="quantity-btn-detail">
+                            <input type="button" value="-" class="arrow" onclick="minus('sp1')" />
+                            <input class="quantity-detail form-control" type="number" id="sp1" 
+                            value="1" 
+                                onkeyup="this.value=this.value.replace(/[^0-9]./g,'');" />
+                            <input type="button" value="+" class="arrow" onclick="plus('sp1')" />
                         </div>
                     </div>
-                </section>
+                    <div class="detailProductOption">
+                        <span for="sp1">Lượng đường:</span>
+                        <div class="range-wrap">
+                            <div class="range-value" id="rangeV"></div>
+                            <input id="range" type="range" min="0" max="100" value="100" step="10">
+                        </div>
+                    </div>
+                    
+                </div>
+                <p>
+                    <button class="btn btn-round btn-danger outline">
+                            <i class="fa fa-shopping-cart"></i>
+                            Thêm vào giỏ hàng
+                    </button>
+                </p>
+                <input type="number" id="product-quantity" class="hide" value="{{#each product}}{{Quantity}}{{/each}}"/>
             </div>
-        </div>
-    </div>
+    </section>
 </div>
