--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -859,6 +859,7 @@ ol li:before {
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-left: 10px;
 }
 .btn-add-to-cart{
   margin: 20px 0;
@@ -878,35 +879,80 @@ ol li:before {
   border-radius: 10px;
 
 }
-
-#optionIce::after{
-  content: "100";
-  top: 63%;
-  left: 87%;
-  position: absolute;
+.detail-content-wrap{
+  width: 35vw;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px 2px rgb(150, 150, 150);
+  padding: 20px;
 }
-#optionIce::before{
-  content: "0";
-  top: 63%;
-  left: 8%;
-  position: absolute;
+#range{
+  border-bottom: 0;
 }
-#optionSugar::after{
-  content: "100";
-  top: 85%;
-  left: 87%;
-  position: absolute;
-}
-#optionSugar::before{
-  content: "0";
-  top: 85%;
-  left: 8%;
-  position: absolute;
-}
-.optionIceSugar{
+input[type=range] {
+  -webkit-appearance: none;
+  margin: 20px 0;
   width: 100%;
-  color: #000;
-  font-size: 1.1em;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 4px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: #03a9f4;
+  border-radius: 25px;
+}
+input[type=range]::-webkit-slider-thumb {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow: 0 0 4px 0 rgba(0,0,0, 1);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -8px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #03a9f4;
+}
+.range-wrap{
+  width: 300px;
+  position: relative;
+}
+.range-value{
+  position: absolute;
+  top: -20%;
+}
+.range-value span{
+  width: 30px;
+  height: 22px;
+  line-height: 24px;
+  text-align: center;
+  background: #03a9f4;
+  color: #fff;
+  font-size: 12px!important;
+  display: block;
+  position: absolute;
+  left: 50%;
+  top: 5px;
+  transform: translate(-50%, 0);
+  border-radius: 6px;
+}
+.range-value span:before{
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-top: 10px solid #03a9f4;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  margin-top: -3px;
 }
 .tilte-option{
   text-align: center;
@@ -1082,8 +1128,12 @@ button.tm-more-button {
   width: 50px;
   outline: none;
   border: 1px solid rgba(105, 105, 105, 0.7);
-  border-radius: 5px;
+  border-radius: 2px;
   padding-left: 16px;
+  font-size: .9em;
+}
+#priceSale div span{
+  font-weight: bold;
 }
 
   .panel {
@@ -1185,16 +1235,17 @@ button.tm-more-button {
   }
   
   .pro-img-details {
-      margin-left: -15px;
+      margin: 0 30px;
+      height: 300px;
       padding: 5px;
-      border: 1px solid rgb(128, 128, 128);
-      background-color: rgb(223, 223, 223);
-      border-radius: 5px;
+      background-color: #fff;
+      border-radius: 10px;
+      box-shadow: 0px 0px 5px 2px rgb(150, 150, 150);
   }
   
   .pro-img-details img {
-      width: 100%;
-      height: 300px;
+      width: 25vw;
+      height: 100%;
       object-fit: fill;
       border-radius: 5px;
   }
@@ -1204,9 +1255,14 @@ button.tm-more-button {
   div.detail-wrap{
     min-height: 650px;
   }
+  div.detail-wrap section{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
   
   .pro-d-title {
-      font-size: 24px;
+      font-size: 30px;
       margin-top: 0;
       font-weight: bold;
       text-transform: uppercase;
@@ -1316,10 +1372,14 @@ button.tm-more-button {
 .horizontal-line{
   border-bottom: 1px solid #000;
 }
-.horizontal-line_top{
+.horizontal-line-detail{
   margin-top: 20px;
   padding-top: 10px;
   border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+}
+.horizontal-line-detail strong{
+  font-size: 16px;
 }
 #title-checkout-order h4{
   font-weight: bold;
@@ -1327,4 +1387,14 @@ button.tm-more-button {
 }
 .form-group span{
   font-weight: bold;
+  font-size: 16px;
+}
+.detailProductOption{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+.detailProductOption div.quantity-btn-detail{
+  transform: scale(.8);
 }
