--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -881,78 +881,21 @@ ol li:before {
 }
 .detail-content-wrap{
   width: 35vw;
-  background-color: #fff;
+  /* background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0px 0px 5px 2px rgb(150, 150, 150);
-  padding: 20px;
+  box-shadow: 0px 0px 5px 2px rgb(150, 150, 150); */
+  padding: 0 20px;
 }
-#range{
-  border-bottom: 0;
+#sugar-wrap{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
-input[type=range] {
-  -webkit-appearance: none;
-  margin: 20px 0;
-  width: 100%;
-}
-input[type=range]:focus {
-  outline: none;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 4px;
-  cursor: pointer;
-  animate: 0.2s;
-  background: #03a9f4;
-  border-radius: 25px;
-}
-input[type=range]::-webkit-slider-thumb {
-  height: 20px;
-  width: 20px;
-  border-radius: 50%;
-  background: #fff;
-  box-shadow: 0 0 4px 0 rgba(0,0,0, 1);
-  cursor: pointer;
-  -webkit-appearance: none;
-  margin-top: -8px;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #03a9f4;
-}
-.range-wrap{
-  width: 300px;
-  position: relative;
-}
-.range-value{
-  position: absolute;
-  top: -20%;
-}
-.range-value span{
-  width: 30px;
-  height: 22px;
-  line-height: 24px;
-  text-align: center;
-  background: #03a9f4;
-  color: #fff;
-  font-size: 12px!important;
-  display: block;
-  position: absolute;
-  left: 50%;
-  top: 5px;
-  transform: translate(-50%, 0);
-  border-radius: 6px;
-}
-.range-value span:before{
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 0;
-  border-top: 10px solid #03a9f4;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  top: 100%;
-  left: 50%;
-  margin-left: -5px;
-  margin-top: -3px;
+#sugar-wrap div{
+  display: flex;
+  width: 50px;
+  flex-grow: 1;
+  font-size: .9em;
 }
 .tilte-option{
   text-align: center;
@@ -1252,9 +1195,9 @@ button.tm-more-button {
   .btn-addToCart, .btn-addToCart:hover{
     color: #fff;
   }
-  div.detail-wrap{
+  /* div.detail-wrap{
     min-height: 650px;
-  }
+  } */
   div.detail-wrap section{
     display: flex;
     flex-direction: row;
@@ -1373,7 +1316,6 @@ button.tm-more-button {
   border-bottom: 1px solid #000;
 }
 .horizontal-line-detail{
-  margin-top: 20px;
   padding-top: 10px;
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
@@ -1385,6 +1327,33 @@ button.tm-more-button {
   font-weight: bold;
   font-size: 1.2em;
 }
+#title-detail{
+  position: relative;
+  margin-top: 100px;
+}
+#title-detail hr{
+ border-top: 3px double #ffce89;
+}
+#title-detail h4{
+  background-color: #e4e4e4;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 1.9em;
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  top: -14px;
+
+  left: 50%;
+  transform: translateX(-50%);
+
+  font-weight: 550;
+  color: #ba7c23;
+}
+#detailProduct_content{
+  margin: 50px auto;
+  max-width: 800px;
+}
 .form-group span{
   font-weight: bold;
   font-size: 16px;
@@ -1394,6 +1363,10 @@ button.tm-more-button {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
+  margin: 15px 0;
+}
+.detailProductOption div#sugar-wrap{
+  flex-grow: 1;
 }
 .detailProductOption div.quantity-btn-detail{
   transform: scale(.8);
