--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -55,7 +55,7 @@
                 <a href="/profile"><i class="fas fa-user icon"></i> Hi, {{user.user.name}}</a>
                 <ul id="menu-account">
                   <li><a href="/profile">Profile</a></li>
-                  <li><a>Logout</a></li>
+                  <li><a href="">Logout</a></li>
                 </ul>
               </li>
               {{else}}
