--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -838,6 +838,7 @@ ol li:before {
           box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(199, 156, 96, 0.6);
 }
 .quantity-detail, .quantity-detail:focus{
+  text-align: center;
   border-left: 0;
   border-right: 0;
   border-color: #000;
@@ -932,7 +933,7 @@ ol li:before {
 }
 .arrow{
   height: 34px;
-  width: 60px;
+  width: 40px;
   border: 1px solid rgba(0, 0, 0, 0.7);
   padding: 0;
 }
