--- a/src/public/frontend/css/templatemo-style.css
+++ b/src/public/frontend/css/templatemo-style.css
@@ -16,6 +16,9 @@ COLOR CODES
 a{
   text-decoration: none!important;
 }
+th{
+  text-align: center;
+}
 #loader-wrapper {
     position: fixed;
     top: 0;
@@ -70,7 +73,9 @@ a{
     -webkit-animation: spin 1.5s linear infinite; /* Chrome, Opera 15+, Safari 5+ */
       animation: spin 1.5s linear infinite; /* Chrome, Firefox 16+, IE 10+, Opera */
 }
-
+.text-center{
+  text-align: center;
+}
 @-webkit-keyframes spin {
     0%   { 
         -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
@@ -284,6 +289,11 @@ ul {
 }
 .icon-cart{
   font-size: 32px;
+  color: #337ab7;
+}
+#form-cart img{
+  width: 50px;
+  height: 50px;
 }
 /* popups cart  */
 .wrap-popups-cart{
@@ -292,7 +302,6 @@ ul {
   justify-content: center;
 
   min-height: 500px;
-  width: 700px;
 
   padding: 20px;
 
