--- a/src/views/layouts/home-layout.handlebars
+++ b/src/views/layouts/home-layout.handlebars
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link href="/frontend/css/bootstrap.min.css" rel="stylesheet">
   <link href="/frontend/css/font-awesome.min.css" rel="stylesheet">
   <link href="/frontend/css/all.css" rel="stylesheet">
@@ -103,9 +103,9 @@
   <!-- Cart  -->
   {{#if showCart}}
   <div class="wrap-cart">
-    <div class="cart">
+    <div class="cart" onclick="loadCart()">
       <a><i class="fas fa-shopping-cart icon-cart"></i></a>
-      <div class="cart-notify">99</div>
+      <div class="cart-notify" id="count-pro-cart">99</div>
     </div>
   </div>
   <!-- popups  -->
@@ -122,78 +122,14 @@
               <tr>
                 <th scope="col"> </th>
                 <th scope="col">Tên sản phẩm</th>
-                <th scope="col" class="text-center">Số lượng</th>
-                <th scope="col" class="text-right">Giá</th>
+                <th scope="col" >Số lượng</th>
+                <th scope="col" >Lượng đường</th>
+                <th scope="col" >Giá</th>
                 <th> </th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                <td>Sản phẩm 1</td>
-                <td>
-                  <div class="quantity-btn">
-                    <input type="button" value="-" class="arrow" onclick="minus('sp1')" />
-                    <input class="form-control" type="number" id="sp1" value="1" min="1" max="99"
-                      onkeyup="this.value=this.value.replace(/[^0-9]./g,'');" />
-                    <input type="button" value="+" class="arrow" onclick="plus('sp1')" />
-                  </div>
-                </td>
-                <td class="text-right">12 VNĐ</td>
-                <td class="text-right"><button class="btn btn-sm btn-danger outline"><i class="fa fa-trash"></i>
-                  </button> </td>
-              </tr>
-              <tr>
-                <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                <td>Sản phẩm 2</td>
-                <td>
-                  <div class="quantity-btn">
-                    <input type="button" value="-" class="arrow" onclick="minus('sp2')" />
-                    <input class="form-control" type="number" id="sp2" value="1" min="1" max="99"
-                      onkeyup="this.value=this.value.replace(/[^0-9]./g,'');" />
-                    <input type="button" value="+" class="arrow" onclick="plus('sp2')" />
-                  </div>
-                </td>
-                <td class="text-right">23 VNĐ</td>
-                <td class="text-right"><button class="btn btn-sm btn-danger outline"><i class="fa fa-trash"></i>
-                  </button> </td>
-              </tr>
-              <tr>
-                <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
-                <td>Sản phẩm 3</td>
-                <td>
-                  <div class="quantity-btn">
-                    <input type="button" value="-" class="arrow" onclick="minus('sp3')" />
-                    <input class="form-control" type="number" id="sp3" value="1" min="1" max="99"
-                      onkeyup="this.value=this.value.replace(/[^0-9]./g,'');" />
-                    <input type="button" value="+" class="arrow" onclick="plus('sp3')" />
-                  </div>
-                </td>
-                <td class="text-right">2 VNĐ</td>
-                <td class="text-right"><button class="btn btn-sm btn-danger outline"><i class="fa fa-trash"></i>
-                  </button> </td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>Tổng tiền sản phẩm</td>
-                <td class="text-right">235 VNĐ</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>VAT</td>
-                <td class="text-right">10 VNĐ</td>
-              </tr>
-              <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td><strong>Tổng tiền</strong></td>
-                <td class="text-right"><strong>346 VNĐ</strong></td>
-              </tr>
+            <tbody id="form-cart">
+              
             </tbody>
           </table>
         </div>
@@ -257,6 +193,7 @@
   <script src="/frontend/js/all.js"></script>
   <script src="/frontend/js/index.js"></script>
   <script src='https://cdn.jsdelivr.net/gh/vietblogdao/js/districts.min.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
   <script>
     $(document).ready(function () {
